--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,6 @@ h3 {
 .header {
     background-color: #b1cdc3;
     padding: 16px 0;
-    color: white;
 }
 
 .header-content {
@@ -86,7 +85,7 @@ h3 {
 }
 
 .navbar.is-open {
-    max-height: 200px;
+    max-height: 225px;
 }
 
 .navbar .container {
@@ -122,7 +121,7 @@ h3 {
 
 .section-title {
     padding-bottom: 10px;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 .banner-greetings {
@@ -280,21 +279,20 @@ h3 {
 /*Карточки с акциями - начало */
 
 .section-promotions {
-    background-color: #343c44;
-    padding: 15px 0 10px;
+    padding: 24px 0;
 }
 
 .promotions-carousel {
     height: 400px;
-    background-color: #b1cdc3;
 }
 
 .block-promotions {
+    background-color: #b1cdc3;
     display: none;
     flex-direction: column;
     justify-content: center;
-    padding: 10px 15px;
-    width: 40%;
+    padding: 10px 50px;
+    width: 50%;
     gap: 10px;
     white-space: initial;
 }
@@ -323,30 +321,73 @@ h3 {
 }
 
 .certificate {
+    position: relative;
     height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.certificate-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 1;
+    color: white;
+    border: 1px solid white;
+    padding: 20px;
+    font-family: BadScript, sans-serif;
+    font-size: 40px;
+    white-space: initial;
+    background: rgba(255, 255, 255, 0.15);
+}
+
+.certificate-text span {
+    font-family: 'OpenSans', sans-serif;
+    font-weight: bold;
+    font-size: 46px;
+}
+
+.certificate-text * {
+    text-align: center;
 }
 
 .img-promotions {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 /*Карточки с акциями - конец */
 
     /*Прайс лист - начало*/
-
-.block-price-list{
-    display: flex;
-    align-items: center;
-    gap: 50px;
-    flex-direction: unset;
-    width: 100%;
-    padding: 0;
+.section-price-list {
+    padding: 24px 0;
     background-color: #e9d8c5;
-    background-blend-mode: screen;
+}
+
+.list-wrapper {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.price-image {
+    display: none;
+    position: relative;
 }
 
 .img-price {
-    width: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .block {
@@ -365,10 +406,9 @@ h3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
-    width: 50%;
-    font-size: 20px;
-    padding: 0 50px 0 0;
+    gap: 10px;
+    padding: 0;
+    background-color: #e9d8c5;
 }
 
 /*Прайс лист - конец*/
@@ -382,11 +422,16 @@ h3 {
     padding: 24px 0;
 }
 
+.people-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 .block-people {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: 20px;
+    overflow-x: auto;
 }
 
 .people-slide {
@@ -430,10 +475,10 @@ h3 {
     /*Лого + кнопка Вконтакте - начало*/
 
 .recording-window {
-   background-color: #FFFFFF;
+    background-color: #FFFFFF;
     border-top: 1px solid var(--block_border);
     height: auto;
-    padding: 20px 0;
+    padding: 24px 0;
 }
 
 .recording {
@@ -476,11 +521,7 @@ h3 {
     /*Карта  - начало*/
 
 .section-map {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 15px 0;
-    border-radius: 5px;
+    padding: 24px 0;
 }
 
 .block-address {
@@ -492,7 +533,7 @@ h3 {
 }
 
 .map-item {
-    width: 70%;
+    width: 100%;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2), 0 4px 6px rgba(0,0,0,0.2);
 }
 
@@ -621,9 +662,7 @@ div[class*=box] {
 }
 
 .block-footer {
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
+    text-align: center;
 }
 
 .social-network {
@@ -678,10 +717,6 @@ div[class*=box] {
         display: block;
     }
 
-    .recording-window {
-        margin: 20px 0;
-    }
-
     .recording {
         width: 500px;
         border-radius: 5px;
@@ -694,6 +729,19 @@ div[class*=box] {
     }
     .banner-image img {
         object-position: 75%;
+    }
+    .promotions-carousel {
+        height: 400px;
+    }
+    .price-list {
+        gap: 20px;
+        font-size: 20px;
+    }
+    .price-image {
+        display: block;
+    }
+    .certificate-text {
+        font-size: 40px;
     }
 }
 
@@ -715,6 +763,18 @@ div[class*=box] {
     }
     .banner-image img {
         object-position: 70%;
+    }
+    .certificate {
+        width: 50%;
+    }
+    .section-price-list {
+        background-color: unset;
+    }
+    .list-wrapper {
+        grid-template-columns: 1fr 1fr;
+    }
+    .price-list {
+        padding: 40px 30px;
     }
 }
 
